--- a/CSS_Project/css/main.css
+++ b/CSS_Project/css/main.css
@@ -1,4 +1,4 @@
-p {
+/* p {
     color: red;
     font-size: 20px;
 }
@@ -6,4 +6,197 @@ p {
 .special {
     color: green;
     font-size: 20px;
+} */
+
+/* div { 
+    color: aliceblue;
+    background-color: red ;
+    background-color: rgb(0,0,0 ,50%);
+    background-color: #00FF00;
+    background-image: url(../imgs//blue-aesthetic-5120x2880-17495-150x150.png);
+    background-repeat:  no-repeat;
+    /* background-attachment: fixed; */
+    /* background-position: 50px 100px; */
+    /* background-size: 50% 50%; */
+    
+/* 
 }
+ */
+
+
+
+/* div {
+    background-color: #ddd;
+    padding: 10px;
+    width: 70%;
+    margin: auto;
+    border: 10px red solid;
+    
+} */
+/* 
+div {
+    color: white;
+    width: 500px;
+}
+.assign-1-shape-1 {
+    margin: 10px;
+    padding: 20px;
+    background-color: #a22be2;
+    margin: auto;
+    margin-bottom: 20px;
+}
+.assign-1-shape-2 {
+    margin: 10px;
+    padding: 20px;
+    background-color: rgba(137, 43, 226, 0.5);
+    margin: auto;
+    margin-bottom: 20px;
+}
+.assign-1-shape-3 {
+    margin: 10px;
+    padding: 20px;
+    background-color: hsl(271 76% 53% / 0.1);
+    margin: auto;
+    margin-bottom: 20px;
+} */
+
+/* div {
+    color: white;
+    width: 400px;
+    height: 400px;
+    padding: 10px;
+    margin: auto;
+}
+.assign-2-shape-1 {
+    background-image: url(https://elzero.org/wp-content/uploads/2021/02/css-assignment-5-8.png);
+    background-repeat: no-repeat;
+}
+.assign-2-shape-2 {
+    background-image: url(https://elzero.org/wp-content/uploads/2021/02/css-assignment-5-8.png);
+    background-repeat: repeat-y;
+    margin-bottom: 50px;
+}
+.assign-2-shape-3 {
+    background-image: url(https://elzero.org/wp-content/uploads/2021/02/css-assignment-5-8.png);
+    background-repeat: repeat-x;
+}
+.assign-2-shape-4 {
+    background-image: url(https://elzero.org/wp-content/uploads/2021/02/css-assignment-5-8.png);
+    background-repeat: repeat;
+} */
+
+
+
+/* 
+div {
+    background-color: #ddd;
+    color: white;
+    width: 400px;
+    height: 400px;
+    padding: 10px;
+    margin: auto;
+    margin-bottom: 30px;
+}
+.assign-3-shape-1 {
+    background-image: url(https://elzero.org/wp-content/uploads/2021/02/css-assignment-5-8.png);
+    background-repeat: no-repeat;
+    
+}
+.assign-3-shape-2{
+    background-image: url(https://elzero.org/wp-content/uploads/2021/02/css-assignment-5-8.png);
+    background-repeat: repeat-y;
+    background-position:right top ;
+
+}
+.assign-3-shape-3 {
+    background-image: url(https://elzero.org/wp-content/uploads/2021/02/css-assignment-5-8.png);
+    background-repeat: repeat-x;
+    background-position: center bottom;
+
+}
+.assign-3-shape-4 {
+    background-image: url(https://elzero.org/wp-content/uploads/2021/02/css-assignment-5-8.png);
+    background-repeat: repeat;
+
+} */
+
+
+/* 
+div {
+    background-color: #ddd;
+    color: white;
+    padding: 20px;
+    margin: auto;
+    width: 400px;
+    height: 400px;
+    margin-bottom: 20px;
+}
+.assign-4-shape-1{
+    background-image: url(https://elzero.org/wp-content/uploads/2021/02/css-assignment-5-8.png);
+    background-repeat: no-repeat;
+    background-size:80% 80%;
+}
+.assign-4-shape-2{
+    background-image: url(https://elzero.org/wp-content/uploads/2021/02/css-assignment-5-8.png);
+    background-repeat: no-repeat;
+    background-size:80% 100%;
+    background-position:  right top;
+}
+.assign-4-shape-3{
+    background-image: url(https://elzero.org/wp-content/uploads/2021/02/css-assignment-5-8.png);
+    background-repeat: no-repeat;
+    background-size:100% 80%;
+    background-position:  center bottom;
+}
+.assign-4-shape-4{
+    background-image: url(https://elzero.org/wp-content/uploads/2021/02/css-assignment-5-8.png);
+    background-repeat: no-repeat;
+    background-size:50% 50%;
+    background-position:  right bottom;
+} */
+
+
+/* div {
+    background-color: #ddd;
+    width: 400px;
+    margin-bottom: 20px;
+    padding: 20px ;
+}
+
+
+.element-1 {
+    border-left: 10px solid blueviolet;
+    ;
+}
+
+.element-2 {
+    visibility: hidden;
+    border-left: 10px solid blue;
+}
+
+.element-3 {
+    border-left: 10px solid aquamarine;
+} */
+
+/* 
+div {
+    background-color: #ddd;
+    display: inline-block;
+    margin: 20px;
+    padding: 20px;
+    outline: black 5px solid; 
+    border-radius: 10px;
+}
+.element-1 {
+    
+    border: 5px solid red;
+    
+}
+.element-2 {
+    border: 5px solid ;
+    border-color: blue green;
+}
+.element-3 {
+    border: 5px dashed ;
+    border-color: red green blue yellow;
+} */
