--- a/CSS_Project/css/main.css
+++ b/CSS_Project/css/main.css
@@ -200,3 +200,89 @@ div {
     border: 5px dashed ;
     border-color: red green blue yellow;
 } */
+
+
+/* .one,
+.two,
+p {
+    padding: 10px;
+    margin: 15px 0px;
+    background-color: #ddd;
+}
+.one {
+    border-bottom: 5px solid red;
+    border-radius: 10px;
+}
+.two {
+    border: 5px solid green;
+    border-radius: 10px;
+} */
+
+/* p {
+    color: red;
+    font-size: 20px;
+}
+
+div .special {
+    color: green;
+    font-size: 20px;
+}
+
+div p {
+    color: blueviolet;
+    font-size: large;
+    font-family: 'Courier New', Courier, monospace;
+} */
+
+
+/* div{
+    background-color: #ddd;
+    width: 150px;
+    height: 150px;
+    border-radius: 6px;
+    margin: 20px auto;
+    overflow: hidden;
+} */
+
+/* p, .title {
+    font-size: 20px;
+    color: green;
+}
+
+.parent .child span   {
+    color: red;
+}
+.parent .title {
+    color: blue;
+}
+
+
+.one{
+    color: white;
+    background-color: red;
+    padding: 10px;
+    margin: 10px;
+    max-width: 400px;
+    max-height: 40px;
+    overflow: hidden;
+    
+} */
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #ddd;
+    margin: 0;
+    padding: 20px;
+}
+/* 
+.one {
+    color: white;
+    background-color: red;
+    padding: 10px;
+    margin: 10px;
+    max-width: 400px;
+    max-height: 45px;
+    overflow: hidden;
+} */
+
+
