--- a/CSS_Project/css/main.css
+++ b/CSS_Project/css/main.css
@@ -1,12 +1,12 @@
 /* p {
     color: red;
     font-size: 20px;
-}
-
+    
 .special {
     color: green;
     font-size: 20px;
-} */
+} 
+*/
 
 /* div { 
     color: aliceblue;
@@ -268,12 +268,12 @@ div p {
     
 } */
 
-body {
+/* body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: #ddd;
     margin: 0;
     padding: 20px;
-}
+} */
 /* 
 .one {
     color: white;
@@ -429,4 +429,66 @@ a {
     display: inline-block;
     
 } */
+
+/* 
+div{
+    text-transform: uppercase;
+    text-align: center;
+    padding: 20px;
+    background-color: #eee;
+    border: 2px solid rebeccapurple;
+    width: 500px;
+    font-family:'Times New Roman', Times, serif;
+    font-size: 20px;
+}
+p { 
+    border: 1px solid ;
+    border-color: inherit; 
+}
+
+span {
+    font-size: larger;
+} */
+
+/* button {
+    cursor: pointer;
+    border: none; 
+    background: transparent;  
+    color: red;
+    font-weight: bold;
+}
+
+span {
+    cursor: grab;
+}
+
+p {
+    cursor: move;
+} */
+
+/* div{
+    font-size: 20px;
+    text-align: center;
+    padding: 30px;
+    border: 2px solid #009688 ;
+}
+
+p{
+    background-color: #eee;
+    border: inherit;
+    padding: inherit;
+} */
+
+
+
+ /* html{
+    font-size: 20px;
+ } */
+
+/* .pTest{
+    text-align: center;
+     font-size: 2.5rem; /* 50px */
+ /* } 
+
+
 
