--- a/CSS_Project/css/main.css
+++ b/CSS_Project/css/main.css
@@ -488,7 +488,307 @@ p{
 /* .pTest{
     text-align: center;
      font-size: 2.5rem; /* 50px */
- /* } 
+
+
+/* p {
+    font-family: 'Cabin', serif;
+} */
+
+
+/* 
+form{
+    background-color: #009688;
+    
+    text-align: center;
+    width: 400px;
+    margin: -3px auto ;
+    padding: 20px;
+    border: 2px solid black ;
+    text-shadow: 1px 1px 1px burlywood;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: bold;
+}
+input {
+    background-color: rgb(118, 34, 157);
+    color: white;
+    margin: 5px;
+    border: inherit ;
+}
+.login,.account{
+    cursor: pointer;
+}
+
+a {
+    text-decoration: none;
+    display: inline-block;
+    color: white;
+    margin-left: -137px;
+    border-radius: 5px;
+    font-weight: normal;
+}
+ .account{
+    margin-left: -100px;
+    border: none;
+    background-color:transparent;
+    text-decoration: underline;
+    font-size: smaller;
+}
+
+p{
+    display: inline;
+    color: white;
+    font-size: 9px;
+}
+ */
+
+
+/* 
+.parent {
+    background-color: red;
+    padding: 10px;
+    overflow: hidden;
+}
+
+.parent div {
+    background-color: #ddd;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    text-align: center;
+    width: 25%;
+    float: left ;
+}
+.clear {
+    clear: both;
+} */
 
 
 
+
+/* 
+5 product 
+space 1% * 6  = 6%
+94%  94 / 5 = 18.8
+ */
+
+/* body {
+    margin: 0;
+}
+
+div {
+    background-color: #ddd;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    text-align: center;
+    float: left;
+    width: 18.8%;
+    margin-left: 1%;
+} */
+
+/* 
+6 product 
+space 15 px * 7  = 105 px
+(100% - 105px)/6
+ */
+
+/* body {
+    margin: 0;
+}
+
+div {
+    background-color: #ddd;
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    float: left;
+    width:calc((100% - 105px)/6) ;
+    margin-left:15px ;
+
+} */
+
+
+/* .one {
+    background-color: red;
+    opacity: 0.2;
+}
+
+.two {
+    background-color: rgb(255, 0, 0,0.2);
+} */
+
+
+/* div {
+    margin: 20px auto;
+    padding: 20px;
+    width: 300px;
+    color: black;
+    font-weight: bold;
+    font-size: 1rem;
+    background-color: #B3B3B3;
+    text-align: center;
+}
+.one {
+    background-color:rgba(179, 179, 179,0.1) ;
+}
+.two {
+    background-color:rgba(179, 179, 179,0.1) ;
+    opacity: 0.1;
+} */
+
+
+/* 
+* {
+    box-sizing: border-box;
+}
+
+div.parent {
+    background-color: #ddd;
+    width: 1000px;
+    overflow: hidden;
+    margin: 20px auto;
+}
+
+.ch1,.ch2,.ch3,.ch4 {
+    background-color: #139adeb6;
+    text-align: center;
+    margin-left: 15px;
+    margin-top: 15px;
+    float: left;
+    padding: 20px;
+}
+
+.ch1 {
+    width: calc((100% - 30px) / 1);
+}
+
+.ch2 {
+
+    width: calc((100% - 60px) / 3);;
+}
+
+.ch3 {
+
+    width: calc((100% - 45px) / 2);
+}
+
+.ch4 {
+
+    width: calc((100% - 75px) / 4);
+    margin-bottom: 15px ;
+}
+ */
+
+
+
+/* * {
+    box-sizing: border-box;
+}
+
+
+div.parent {
+    background-color: #eee;
+    max-width: 800px;
+    overflow: hidden;
+    margin: 20px auto;
+}
+
+.full,
+.one-1,
+.two-2,
+.three-3 {
+    background-color: grey;
+    font-size: 20px;
+    font-weight: 700;
+    float: left;
+    margin-left: 15px;
+    margin-top: 15px;
+    text-align: center;
+    padding: 20px;
+
+}
+
+div.clear {
+    clear: both;
+}
+
+.full {
+    width: calc((100% - 30px) / 1);
+}
+
+.one-1 {
+    width: calc((100% - 60px) / 3);
+}
+
+.two-2 {
+    width: calc((100% - 45px) / 2);
+}
+
+.three-3 {
+    width: calc((100% - 75px) / 4);
+    margin-bottom: 15px;
+}
+ */
+
+
+/* 
+ div {
+  width: 200px;
+  padding: 20px;
+  border: 5px solid black;
+  margin: 10px;
+  background-color: lightblue;
+  text-align: center;
+  font-weight: bold;
+}
+
+
+.content-box {
+  box-sizing: content-box;
+}
+
+.border-box {
+  box-sizing: border-box;
+  background-color: lightgreen;
+} */
+
+/* body {
+    background-color:#ddd ;
+}
+
+div {
+    color: white;
+    width: 100px ;
+    padding: 10px;
+}
+
+.one {
+    background-color: red;
+    position: absolute;
+    right: 5px;
+    bottom: 5px;
+}
+.two {
+    background-color: green;
+}
+
+.parent {
+    width: 500px;
+    height: 300px;
+    background-color: blue;
+    position: relative;
+} */
+
+
+
+
+/* body {
+ min-height: 5000px;
+}
+
+.parent {
+    background: red;
+    padding: 20px;
+    color: white ;
+    text-align: center;
+    position: sticky;
+    top: 5px;
+} */
