--- a/CSS_Project/css/main.css
+++ b/CSS_Project/css/main.css
@@ -792,3 +792,253 @@ div {
     position: sticky;
     top: 5px;
 } */
+
+/* 
+div {
+    padding: 20px;
+    color: white;
+    width: 100px;
+    text-align: center;
+    position: absolute;
+}
+
+.one {
+    background: red;
+    top: 40px;
+    left: 40px;
+    z-index: 3;
+}
+
+.two {
+    background: green;
+    top: 30px;
+    left: 30px;;
+}
+
+.three {
+    background: blue;
+} */
+
+
+/* ul {
+    list-style-type:armenian ;
+    list-style-position: inside ;
+    list-style-image: url(/CSS_Project/imgs/blue-aesthetic-5120x2880-17495-150x150.png) ;
+} */
+
+
+
+
+/* 
+body {
+    font-family: 'Times New Roman', Times, serif;
+}
+table {
+    border-spacing: 0px;
+    width: 100%;
+}
+table td {
+    padding: 10px;
+    background-color: #eee;
+    border: 1px solid gray;
+    text-transform: capitalize ;
+}
+table thead td {
+    background-color: #00514ab5;
+    border-color:#00514afc;
+    color: white;
+    text-align: center;
+    font-weight: bold;
+    text-transform: uppercase;
+
+} */
+
+/* 
+div {
+    width: 100px;
+    height: 100px;
+    position: absolute;
+
+}
+
+.red {
+    background-color: #F44336;
+    z-index: 4;
+    left: 30px;
+    top: 30px;
+}
+.green {
+    background-color: #009688;
+    z-index: 3;
+    left: 25px;
+    top: 25px;
+
+}
+.blue {
+    background-color: #03A9F4;
+    z-index: 2;
+    left: 20px;
+    top: 20px;
+
+}
+.black {
+    background-color: #333333;
+    z-index: 1;
+  left: 20px;
+    top: 25px;
+
+} */
+
+
+
+/* 
+* {
+    box-sizing: border-box  ;
+}
+
+div {
+    width: 400px;
+    padding: 10px;
+    margin: 20px auto;
+    background-color: #EEEEEE;
+    border-bottom:2px solid #F3554A;
+    border-top:2px solid #F3554A;
+    border-left:2px solid #2196F3;
+    border-right:2px solid #2196F3;
+    line-height: 1.6;
+}
+.top-left {
+    position: absolute;
+    padding: 0 10px;
+    background-color: #2196F3;
+    color: white;
+    top: 9px;
+    left: 107px;
+    border-right:2px solid #F3554A ;
+}
+
+.bottom-left {
+    position: absolute;
+    padding: 0 10px;
+    background-color: #2196F3;
+    color: white;
+        top: 132px;
+    left: 109px;
+    border-right:2px solid #F3554A ;
+}
+
+.top-right {
+    position: absolute;
+    padding: 0 10px;
+    background-color: #2196F3;
+    color: white;
+    top: 9px;
+    left: 506px;
+    border-left:2px solid #F3554A ;
+}
+
+.bottom-right {
+    position: absolute;
+    padding: 0 10px;
+    background-color: #2196F3;
+    color: white;
+    top: 132px;
+    left: 506px;
+    border-left:2px solid #F3554A ;
+} */
+
+/* 
+
+.list {
+    width: 400px;
+    margin: 20px auto;
+    padding: 0;
+    list-style: none;
+}
+.html,.css,.js {
+    background-color: #EEEEEE;
+    margin-bottom:20px ;
+    padding: 10px;
+}
+.html ol li ,
+.css ol li ,
+.js ul li {
+    background-color: #fff;
+    padding: 5px;
+    margin-top:10px ;
+    margin-bottom:10px ;
+}
+.css ol li {
+    list-style: upper-roman;
+}
+
+ */
+
+/* 
+table {
+    width: 700px;
+    margin: 20px auto;
+    border-spacing: 0px;
+    text-align: center;
+    font-family:Arial, Helvetica, sans-serif ;
+    
+}
+table thead td {
+    color: white;
+    background-color: #404040;
+    font-weight: bold;
+}
+
+table td {
+    background-color: #EEEEEF;
+    border: 1px solid white;
+    padding: 5px;
+}
+
+button {
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+.View {
+        background-color: #03A9F4;
+}
+.Delete {
+        background-color: #E91E63;
+}
+
+table tfoot td {
+    border-bottom:2px solid #009688;
+}
+
+td:hover{
+    background-color: rgba(0, 128, 81, 0.212);
+} */
+
+
+/* 
+.list {
+    width: 400px;
+    margin: 20px auto;
+    padding: 20px 0;
+    border: 1px solid black;
+}
+.html,
+.css,
+.javascript {
+    background-color: #EEEEEE;
+    list-style: none;
+    margin-bottom: 30px;
+    padding: 10px;
+}
+.html ol li,
+.css ol li,
+.javascript ul li {
+    background-color: #fff;
+    padding: 10px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+.css ol li {
+    list-style-type: upper-roman;
+} */
