--- a/CSS_Project/css/main.css
+++ b/CSS_Project/css/main.css
@@ -1166,7 +1166,7 @@ div:empty {
 
 } */
 
-
+/* 
 .parent {
     overflow: hidden;
     margin-bottom: 50px ;
@@ -1242,4 +1242,112 @@ ul li::before {
     margin-top: -10px;
 
 
+} */
+
+
+/* div {
+    width: 300px;
+    height: 60px;
+    margin: 20px auto;
+    background-color: #EEEEEE;
+    text-align: center;
+    text-transform: capitalize;
+    font-family: 'Times New Roman', Times, serif;
+    padding: 20px;
+    box-sizing: border-box;
 }
+
+div:empty {
+    background-color: red;
+} */
+
+
+
+
+
+
+
+/* p {
+    
+    background-color: #eeeeee;
+    padding: 5px;
+    margin: 20px auto;
+    width: 400px;
+    border-left: 3px solid #E91E63;
+    position: relative;
+
+}
+
+p::before {
+    content: attr(data-person);
+    position: absolute;
+    background-color: #eeeeee;
+    padding: 5px;
+    width: 50px;
+    height: 16px;
+    left: -91px;
+    top: 1px;
+}
+
+p::after {
+        content: "";
+    position: absolute;
+    width: 0px;
+    height: 0px;
+    right: 412px;
+    top: 7px;
+    border-style: solid;
+    border-width: 7px;
+    border-color: transparent #E91E63 transparent transparent;
+} */
+
+
+
+/* p {
+    width: 310px;
+    background-color: #EEEEEE;
+    padding: 10px;
+    margin: 20px auto;
+    height: 22px;
+    position: relative;
+    counter-increment: count;
+    border-right: 4px solid #F44336 ;
+}
+
+p::before {
+    content: counter(count);
+    position: absolute;
+    background: #F44336;
+    color: white;
+    text-align: center;
+    width: 25px;
+    padding: 10px;
+    height: 22px;
+    top: 0;
+    left: -40px;
+} */
+
+
+/* 
+div.text {
+    background-color: #D4D4D4;
+    width: 700px;
+    text-align: center;
+    padding: 30px;
+    font-size: 40px;
+    margin: 100px auto;
+    position: relative;
+}
+div.text span {
+    display: inline-block;
+    background-color: red;
+    color: white;
+    padding: 15px;
+    position: absolute;
+    top: 50%;
+    left: -20px;
+    margin-top: -37px;
+} */
+
+
+
