--- a/CSS_Project/css/main.css
+++ b/CSS_Project/css/main.css
@@ -1413,7 +1413,9 @@ div {
 
 } */
 
-* {
+
+
+/* * {
     box-sizing: border-box;
 }
 
@@ -1443,4 +1445,82 @@ div::after {
     height: 20px;
     right: 40%;
     top: -10px;
+} */
+
+
+/* div {
+    width: 100px;
+    height: 100px;
+    background-color: #EFEFEF;
+    margin: 50px auto;
+    box-shadow: inset 0 0 6px 1px black;
+    border-top-left-radius: 12px;
+    border-bottom-left-radius: 50px;
+    border-top-right-radius: 50px;
+    border-bottom-right-radius: 13px 6px;
+} */
+
+
+
+/* * {
+    box-sizing: border-box;
 }
+
+.parent {
+    width: 550px;
+    margin: 20px auto;
+    text-align:center;
+    overflow: hidden;
+    position: relative;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.one , .two {
+    float: left;
+    height: 200px;
+    width: calc((100% - 120px)/2);
+    background-color: #EEEEEE;
+    padding: 10px;
+    margin-left: 40px;
+}
+.one::after {
+    content: "";
+    height: 200px;
+    position: absolute;
+    border-right: #03a8f487 2px solid;
+    left: 275px;
+    top: 0px;
+}
+
+.two::after {
+    content: " or";
+    color: white;
+    height: 25px;
+    width: 25px;
+    background-color: #03A9F4;
+    border-radius: 50px;
+    position: absolute;
+    left: 263px;
+    top: 100px;
+    
+}
+
+
+p {
+    background-color: #DDDDDD;
+    margin-left: 43px;
+    width: 110px;
+    height: 110px;
+    border-radius: 50%;
+    padding: 41px;
+    font-weight: 200;
+}
+
+h4 {
+    color: white;
+    background-color:#03A9F4 ;
+    padding: 5px;
+    border-radius: 5px;
+    padding: 9px;
+} */
+
