--- a/CSS_Project/css/main.css
+++ b/CSS_Project/css/main.css
@@ -1524,3 +1524,169 @@ h4 {
     padding: 9px;
 } */
 
+
+
+
+
+
+    /* transition-duration: 2s; 
+    transition-delay: 0.2s;
+    transition-property: all ;
+    transition-timing-function: ease-in-out; 
+        transition: width 1s , height 2s ;
+    */
+
+
+/* .one {
+    box-sizing: border-box;
+    background-color: #eee;
+    width: 100px;
+    height: 100px;
+    padding-top: 30px;
+    text-align: center;
+    transition: all 2s 0.2s linear;
+}
+
+.one:hover{
+    background-color: cadetblue;
+    width: 200px;
+    height: 200px;
+} */
+
+
+/* .one {
+    background-color: cadetblue !important;
+} */
+
+/* .parent {
+    overflow: hidden;
+    margin: auto;
+    background-color:#eee ;
+    width: 400px;
+    height: 200px;
+    padding: 10px;
+}
+.parent .one,
+.parent .two  {
+    float: left;
+    width: 50%;
+    height: 100%;
+}
+.one {
+        background-color: #ddd;
+}
+
+.two {
+        background-color: #aaa;
+}
+
+.up {
+    background-color: red;
+    height: 90px;
+    color: white;
+    margin-bottom:20px ;
+}
+
+.down {
+    background-color: green;
+    height: 90px;
+    color: white;
+}
+*/
+
+
+/* 
+:root {
+    --maincolor:cadetblue;
+    --mainpadding: 5px
+}
+
+.main {
+    background-color: var(--maincolor,blue);
+    padding: calc(20px + var(--mainpadding));
+    color:white ;
+}
+
+h3 {
+    background-color: var(--maincolor,black);;
+    padding: var(--mainpadding);
+    color:white ;
+}
+
+p{
+    background-color: var(--maincolor,blue);;
+    padding: var(--mainpadding);
+    color:white ;
+}
+
+a {
+    background-color:red;
+    color:white ;
+}
+
+.local {
+    --maincol: black;
+    --mainpad: 5px;
+    background-color: var(--maincol);
+    padding: var(--mainpad);
+    margin-top: 10px;
+    color: wheat;
+} */
+
+
+/* .parent {
+    background-color: #eee;
+    width: 300px;
+    height: 150px;
+    text-align: center;
+    padding: 10px;
+    margin:100px auto;
+    transition: margin-top 1s 0.1s ease-out;
+}
+.one {
+    background-color: #ddd;
+    padding: 10px;
+    margin: 10px;
+    transition: margin-top 0.5s 0.5s ease ;
+}
+
+.parent:hover {
+    margin-top: 50px;
+}
+
+.parent:hover .one {
+    margin-top: 30px;
+} */
+
+
+
+/* div {
+    font-size: 20px !important;
+    width: 400px;
+    margin: 20px auto;
+    color: transparent !important;
+    position: relative;
+}
+div::before {
+  content: "Elzero";        
+  color: white;            
+  position: absolute;
+  left: 5px;
+  top: 30%;
+} */
+
+
+
+/* :root {
+  --mainColor: #009688;
+  --mainPadding: 10px;
+}
+
+div {
+    margin: 10px;
+    color: var(--mainColor,red);
+    padding: var(--mainPadding ,10px);
+    border: 2px solid var(--mainColor,black);
+} */
+
+
