--- a/CSS_Project/css/main.css
+++ b/CSS_Project/css/main.css
@@ -1689,4 +1689,83 @@ div {
     border: 2px solid var(--mainColor,black);
 } */
 
+* { 
+    box-sizing: border-box;
+}
 
+/* .flex {
+    display: flex;
+    background-color: #eee;
+    margin: 20px auto;
+    width: 600px;
+    padding: 20px;
+    justify-content: space-evenly;
+    align-items: end;
+} 
+
+.flex div {
+    background-color: cadetblue;
+    text-align: center;
+    color: white;
+    width: calc(94% / 3);
+    padding: 20px; 
+}
+
+.one {
+    height: 80px;
+}
+.two {
+    height: 180px;
+}
+
+.flout {
+    overflow: hidden; 
+    background-color: #eee;
+    margin: 20px auto;
+    width: 600px;
+    padding: 20px;
+} 
+
+.flout div {
+    float: left;
+    background-color: rgba(255, 0, 0, 0.695);
+    text-align: center;
+    color: white;
+    width: calc(94% / 3);
+    padding: 20px;
+    margin-left: 1%;
+    margin-right: 1%;
+}
+
+
+.center {
+    color: white;
+    background-color: blue;
+    width: 300px;
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+} */
+
+
+.parent {
+    text-transform: capitalize;
+    text-align: center;
+    background-color: #eee;
+    width: 600px;
+    height: 300px;
+    margin: 40px auto;
+    padding: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: space-around;
+    justify-content: space-evenly;
+}
+
+.parent div {
+    color: white;
+    background-color: cadetblue;
+    width: calc(90% / 3);
+    padding: 20px;
+}
