--- a/CSS_Project/css/main.css
+++ b/CSS_Project/css/main.css
@@ -1335,8 +1335,6 @@ div {
     box-shadow: 3px 4px 5px 4px rgba(255, 0, 0, 0.251) inset, 4px 3px 6px 2px #2196f3;
 } */
 
-
-
 /* * { 
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
@@ -1413,8 +1411,6 @@ div {
 
 } */
 
-
-
 /* * {
     box-sizing: border-box;
 }
@@ -1447,7 +1443,6 @@ div::after {
     top: -10px;
 } */
 
-
 /* div {
     width: 100px;
     height: 100px;
@@ -1459,8 +1454,6 @@ div::after {
     border-top-right-radius: 50px;
     border-bottom-right-radius: 13px 6px;
 } */
-
-
 
 /* * {
     box-sizing: border-box;
@@ -1524,18 +1517,12 @@ h4 {
     padding: 9px;
 } */
 
-
-
-
-
-
 /* transition-duration: 2s; 
     transition-delay: 0.2s;
     transition-property: all ;
     transition-timing-function: ease-in-out; 
         transition: width 1s , height 2s ;
     */
-
 
 /* .one {
     box-sizing: border-box;
@@ -1552,7 +1539,6 @@ h4 {
     width: 200px;
     height: 200px;
 } */
-
 
 /* .one {
     background-color: cadetblue !important;
@@ -1594,7 +1580,6 @@ h4 {
 }
 */
 
-
 /* 
 :root {
     --maincolor:cadetblue;
@@ -1633,7 +1618,6 @@ a {
     color: wheat;
 } */
 
-
 /* .parent {
     background-color: #eee;
     width: 300px;
@@ -1658,8 +1642,6 @@ a {
     margin-top: 30px;
 } */
 
-
-
 /* div {
     font-size: 20px !important;
     width: 400px;
@@ -1675,8 +1657,6 @@ div::before {
   top: 30%;
 } */
 
-
-
 /* :root {
   --mainColor: #009688;
   --mainPadding: 10px;
@@ -1690,7 +1670,7 @@ div {
 } */
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 /* .flex {
@@ -1748,7 +1728,6 @@ div {
     align-items: center;
 } */
 
-
 /* .parent {
     text-transform: capitalize;
     text-align: center;
@@ -1769,7 +1748,6 @@ div {
     width: calc(90% / 3);
     padding: 20px;
 } */
-
 
 /* 
 .flex {
@@ -1795,7 +1773,6 @@ div {
 .in {
     display: inline-block;
 } */
-
 
 /* .flex {
     background-color: #eee;
@@ -1825,8 +1802,6 @@ div {
 /* div{
     background-color: yellow;
 } */
-
-
 
 /* div {
     color: #FF5722;
@@ -1864,7 +1839,6 @@ div {
     padding: 10px;
     width: calc(96% / 3);
 } */
-
 
 /* .parent {
     width: 600px;
@@ -1910,8 +1884,7 @@ div {
     order: 6;
 } */
 
-
-.parent {
+/* .parent {
     width: 600px;
     height: 300px;
     display: flex;
@@ -1928,8 +1901,8 @@ div {
 .parent div {
     background-color:#009688 ;
     color: white;
-    padding: 10px;
     padding-top: 20px;
+    padding: 10px;
     width: calc(15% / 3);
     height: 70px;
 }
@@ -1939,4 +1912,424 @@ div {
     min-width: 50%;
     flex-basis: 70px;
 
+} */
+
+/* .parent {
+    padding: 10px;
+    margin: 40px auto;
+    width: 600px;
+    height: 300px;
+    display: flex;
+    background-color: #eee;
+    text-align: center;
+    justify-content: space-between;
+    align-items: end;
+    flex-direction: row;
+}
+
+.parent div{
+    width: 15%;
+    height: 50%;
+    color: white;
+    padding-top: 50px;
+}
+
+.one {
+    background-color:#FF9800 ;
+    align-self: self-start;
+    order: 2;
+}
+
+.two {
+    background-color:#8BC34A ;
+    order: 3;
+}
+
+.three {
+    background-color:#795548 ;
+    align-self: self-start;
+    order: 4;
+
+}
+
+.four {
+    background-color: #673AB7;
+} */
+
+/* :root {
+    --mainColor: #DDDDDD;
+    --mainPadding: 5px;
+}
+.page {
+    background-color: cadetblue;
+    width: 800px;
+    height: 400px;
+    margin: 40px auto;
+    padding: var(--mainPadding);
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: normal;
+    display: flex;
+    flex-flow: column ;
+    justify-content: space-around;
+    align-content: space-between;
+}
+
+
+header {
+    background-color: var(--mainColor);
+    width: 10%;
+    align-self: self-start;
+}
+nav {
+    display: flex;
+    background-color: var(--mainColor);
+    width: 80%;
+    align-self:end ;
+} 
+
+
+main {
+    display: flex;
+    background-color: var(--mainColor);
+    justify-content: space-around;
+    align-content: space-around;
+    flex: 0 1 20%;
+}
+article {
+    align-self: start;
+    width: 60%;
+    background-color: aqua;
+}
+aside {
+    width: 25%;
+    background-color: aquamarine;
+}
+
+
+footer {
+    background-color: var(--mainColor);
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+ */
+
+/* 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Arial, sans-serif;
+  background: #f0f0f0;
+}
+
+.page {
+  padding: 20px;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #e3e3e3;
+  padding: 10px 20px;
+  margin-bottom: 20px;
+}
+
+.logo {
+  background: #ddd;
+  padding: 15px 25px;
+  font-weight: bold;
+}
+
+.links {
+  list-style: none;
+  display: flex;
+  gap: 20px;
+}
+
+.links li {
+  cursor: pointer;
+}
+
+.main-area {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+
+.content {
+  flex: 3;
+  background: #e3e3e3;
+  padding: 20px;
+}
+
+.sidebar {
+  flex: 1;
+  background: #e3e3e3;
+  padding: 20px;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #e3e3e3;
+  padding: 15px 20px;
+} */
+
+/* 
+img {
+    transition: 0.2s;
+    filter: blur(4px)
+}
+img:hover {
+    filter: blur(0);
+} */
+
+/* div {
+  width: 200px;
+  height: 200px;
+  margin: 20px auto;
+  background-color: #eee;
+  position: relative;
+  padding: 10px;
+}
+div::before {
+  content: "";
+  position: absolute;
+  background-color: red;
+  width: 100%;
+  height: 10px;
+  top: -10px;
+  left: 0;
+  background-image: linear-gradient(
+    to right,
+    cadetblue 30%,
+    yellow 30%,
+    yellow 50%,
+    black 50%,
+    black 60%,
+    blue 60%,
+    blue 70%,
+    green 70%,
+    green 90%
+  );
+} */
+
+
+
+
+/* input , p{
+    caret-color: rgb(43, 226, 134);
+    
+}
+a { 
+    pointer-events: none;
+} */
+
+
+
+/* div {
+    background-color: #eee;
+    margin: 20px auto;
+    padding: 10px;
+    width: 400px;
+    position: relative;
+    caret-color: #F44336;
+    outline: none;
+    opacity: 0.7;
+}
+
+div::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left:0 ;
+    background-color: red;
+    background-image: linear-gradient(to right ,#F44336 50% , #009688 50%);
+} */
+
+
+/* div {
+  background: #eee;
+  padding: 40px;
+  text-align: center;
+  font-size: 40px;
+  font-family: Arial, sans-serif;
+  font-weight: bold;
+  border: 15px solid;
+  border-image: linear-gradient(to right, 
+    red 20%, 
+    dodgerblue 20% 40%, 
+    green 40% 60%, 
+    deeppink 60% 80%, 
+    purple 80% 100%) 1;
+} */
+
+
+
+
+
+/* :root {
+    --mainpadding:10px;
+    --mainmargin: 10px;
+    --parentbackground: #eee;
+    --childbackground: #ddd;
+}
+
+.page {
+    width: 80%;
+    margin: 20px auto;
+    padding: 10px;
+    height: 600px;
+     background-color: var(--parentbackground);
+}
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: var(--mainmargin);
+}
+
+ul {
+    flex-basis: 85%;
+    display: flex;
+    justify-content: flex-end;
+}
+
+ul li {
+    list-style-type: none;
+    display: inline-block;
+    padding-left: var(--mainpadding);
+}
+
+.logo , ul {
+    background-color: var(--childbackground);
+    padding: var(--mainpadding);
+    margin-bottom: 0;
+    margin-top: 0;
+    height: 40px;
+}
+
+.logo {
+    flex-basis: 13%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.main-area {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    height: 83%;
+}
+
+.content , .sidebar {
+    background-color: var(--childbackground);
+    padding: var(--mainpadding);
+    flex:1;
+    display: flex;
+    height: 100%;
+}
+
+.content {
+    flex-basis: 60%;
+    margin-right: var(--mainmargin);
+}
+
+.sidebar {
+    flex-basis: 35%;
+}
+
+.footer {
+    background-color: #ddd;
+    padding: var(--mainpadding);
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+} */
+
+
+
+.page {
+    width: 80%;
+    margin: 20px auto;
+    padding: 10px;
+    height: 650px;
+    background-color: #eee;
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+h4 {
+    flex-basis: 18%;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+h4 , nav {
+    background-color: #ddd;
+    margin-bottom: 5px;
+}
+
+nav{
+    flex-basis: 78%;
+        margin-right: 10px;
+        margin-top: 10px;
+}
+nav ul {
+    display: flex;
+    justify-content: space-between;
+    align-content: end;
+
+}
+li{
+    list-style: none;
+    
+}
+
+main {
+    display: flex;
+    justify-content: space-between;
+        height: 80%;
+}
+
+article , aside {
+    background-color:#ddd ;
+    margin-right: 10px;
+    height: 100%;
+    flex: 1;
+    padding: 10px;
+
+}
+article {
+flex-basis:65%
+}
+aside {
+    flex-basis: 35%;
+}
+
+footer {
+    display: flex;
+    background-color: #ddd;
+    margin-top: 5px;
+    margin-right: 10px;
+    justify-content: space-between;
+    padding: 5px;
 }
