--- a/CSS_Project/css/main.css
+++ b/CSS_Project/css/main.css
@@ -2433,7 +2433,7 @@ div:nth-child(9) {
 
 
 
-* {
+/* * {
     box-sizing: border-box;
     margin: 0;
 }
@@ -2451,4 +2451,199 @@ div:nth-child(9) {
     color: white;
     padding: 10px;
     text-align: center;
+} */
+
+
+
+/* .grid {
+  background-color: #ddd;
+  padding: 20px;
+  width: 800px;
+  height: 400px;
+  margin: 20px auto;
+  display: grid;
+  gap: 20px;
+  grid-template-columns:repeat(3,1fr) ;
+  grid-template-rows:40px 1fr ;
+  text-align: center;
+}
+
+.grid div {
+    background-color: cadetblue;
+    padding: 20px;
+    color: white;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+} */
+
+
+
+
+
+
+
+/* * {
+    box-sizing: border-box;
+    margin: 0;
+}
+ .layout {
+    background-color: #eee;
+    height: 100vh;
+    display: grid;
+    grid-template-columns:  repeat(3,1fr);
+    grid-template-rows: 40px 1fr 40px;
+    grid-template-areas: "head head head "
+    "sec sec bar "
+    "foo foo foo ";
+ }
+
+ header {
+    background-color: #03A9F4;
+    grid-area:head ;
+    padding: 10px;
+ }
+ section {
+    background-color: #FF5722;
+    grid-area:sec ;
+    padding: 10px;
+ }
+ aside {
+    background-color: #607D8B;
+    grid-area:bar ;
+    padding: 10px;
+ }
+ footer {
+    background-color: #009688;
+    grid-area:foo ;
+    padding: 10px;
+ } */
+
+
+
+
+
+/* .grid {
+  background-color: #ddd;
+  padding: 10px;
+  width: 800px;
+  height: 400px;
+  margin: 20px auto;
+  display: grid;
+  grid-template-columns: auto repeat(2,1fr) auto ;
+  grid-template-rows:1fr auto ;
+  gap: 10px;
+
+  justify-content: center;
+}
+
+.grid div {
+    background-color: cadetblue;
+    color: white;
+    text-align: center;
+} */
+
+
+/* .grid {
+  background-color: #ddd;
+  padding: 20px;
+  width: 800px;
+  height: 400px;
+  display: grid;
+  grid-template-columns: auto auto auto;
+  gap: 20px;
+}
+
+.grid div {
+    background-color: #2196F3 ;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-weight: bold;
+    font-size: 30px;
+}
+
+.one {
+    grid-column: span 3 ;
+    order:8 ;
+}
+.eight {
+    grid-column: span 3 ;
+    order:-1 ;
+}
+.two {
+    grid-column: span 2 ;
+
+}
+.five {
+    grid-area: 3 / 2 / 6 / 4 ;
+} */
+
+
+
+
+
+
+/* .grid {
+  background-color: #ddd;
+  margin: 20px auto;
+  padding: 20px;
+  width: 800px;
+  height: 400px;
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+ align-content: space-between; 
+ gap: 20px;
+}
+
+.grid div {
+    background-color:#E91E63 ;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    font-size: 20px;
+} */
+
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.parent {
+    width: 100%;
+    height: 100%;
+    background-color: rebeccapurple ;
+    padding: 20px;
+    display: grid;
+    grid-template-columns: repeat(auto-fill,minmax(200px,auto));
+    gap: 5px;
+
+}
+.parent div {
+    background-color: cadetblue;
+    padding: 10px;
+    border-bottom: 2px solid #FF3D00;
+}
+
+h6 {
+    opacity: 0.5;
+}
+
+div .ch3 , div .ch5  , div .ch8 {
+    background-color: black;
+    color: white;
+}
+
+.p1 {
+    font-weight: bold;
+}
+
+.ch1 {
+    grid-area:1 / 1 / 1/ 4 ;
 }
