--- a/CSS_Project/css/main.css
+++ b/CSS_Project/css/main.css
@@ -2668,7 +2668,7 @@ div:nth-child(9) {
 } */
 
 
-div {
+/* div {
     margin: 50px auto;
     background-color: #EEEEEE;
     width: 300px;
@@ -2701,4 +2701,59 @@ div::before {
 div::after {
     background-color: #E91E63;
     transform: rotate(7deg);
+} */
+
+
+
+div {
+    background-color: #eeeeee;
+    width: 200px;
+    height: 200px;
+    margin: 50px auto;
+    padding-top: 80px;
+    border-radius: 50%;
+    text-align: center;
+    font-size: 30px;
+    font-weight: bold;
+    position: relative;
+}
+
+div::after ,div::before{
+    content: "";
+    position: absolute;
+    border: 10px solid;
+    border-radius: 50%;
+}
+
+div::after {
+    border-color: #E91E63 #E91E63 #E91E63 transparent;
+    width: 100%;
+    height: 100%;
+    top: -10px;
+    left: -10px;
+    transition: 1s ;
+    transform: rotate(-180deg);
+}
+
+div::before {
+    border-color: #2196F3 transparent  #2196F3 #2196F3;
+    width: 110%;
+    height: 110%;
+    top: -20px;
+    right: -20px;
+    transition: 1s 0.7s;
+    transform: rotate(-180deg);
+}
+
+div:hover::before {
+    transition: 1s 0.7s;
+    transform: rotate(180deg);
+}
+div:hover::after {
+    transition: 1s ;
+    transform: rotate(180deg);
+}
+
+div:hover {
+    font-style: italic;
 }
