--- a/CSS_Project/css/main.css
+++ b/CSS_Project/css/main.css
@@ -3011,13 +3011,67 @@ h1::before {
 
 
 
-h1 {
+/* h1 {
     background-color:#FF5722 ;
     margin: 60px auto;
-    width: fit-content;
+    width: 150px;
     padding: 20px;
     color: white;
     font-size: 30px;
+    text-align: center;
     position: relative;
-    transform: matrix(1, 0, 0, 1, 20, 10);
+}
+
+h1::before,
+h1::after{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: inherit;
+    left: 0;
+    top: 0;
+    z-index: -1;
+}
+
+h1::after {
+    transform: skew(15deg,15deg);
+}
+
+h1::before {
+    transform: skew(-15deg,-15deg);
+} */
+
+
+
+div {
+    width: 200px;
+    height: 200px;
+    background-color:#607D8B ;
+    margin: 200px auto;
+    border-bottom:5px solid black;
+    position: relative;
+}
+
+div::before {
+    content: "Akram";
+    position: absolute;
+    bottom:0 ;
+    left: 5px;
+    color: white;
+}
+
+div::after {
+    content: "";
+    position: absolute;
+    width: 138px;
+    height: 138px;
+    background-color: black;
+    border-bottom: 3px solid white ;
+    border-right: 3px solid white ;
+    top: 0px;
+    left: 50%;
+    transform: rotate(45deg);
+    margin-left:-70px ;
+    margin-top:-70px ;
 }
